Fixed screen width overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -29,7 +29,7 @@ footer {
   position: absolute;
   text-align: center;
   bottom: 0;
-  width: 100%;
+  /* width: 100%; */
   height: 2.5rem;
 }
 
